src/tests/snapshots/gitu__tests__blame__blame_enter_on_header.snap
---
source: src/tests/blame.rs
expression: ctx.redact_buffer()
---
 Date:   Fri, 16 Feb 2024 11:11:00 +0100                                        |
                                                                                |
     modify file                                                                |
                                                                                |
     Commit body goes here                                                      |
                                                                                |
 modified   file                                                                |
 @@ -1,3 +1,3 @@                                                                |
  unchanged-top                                                                 |
 -original                                                                      |
▌+SELECT-THIS-LINE                                                              |
  unchanged-bottom                                                              |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 2b9f3fa8eaaf850
