src/tests/snapshots/gitu__tests__blame__blame_navigate_code_line.snap
---
source: src/tests/blame.rs
expression: ctx.redact_buffer()
---
 Blame file @ dc61526641c542a66eef0574499da9b6f12a5764                          |
 1fcc61bc add file                                                              |
    1 unchanged-top                                                             |
 dc615266 modify file                                                           |
    2 SELECT-THIS-LINE                                                          |
▌1fcc61bc add file                                                              |
    3 unchanged-botto                                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: bf87595f7dd29626
