src/tests/snapshots/gitu__tests__blame__blame_re_blame_from_code_line.snap
---
source: src/tests/blame.rs
expression: ctx.redact_buffer()
---
 Blame file @ dc61526641c542a66eef0574499da9b6f12a5764^                         |
 1fcc61bc add file                                                              |
    1 unchanged-top                                                             |
▌   2 original                                                                  |
    3 unchanged-botto                                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 281b71913767ed49
